<resources>
    <string name="app_name">Placer</string>

    <!-- common !-->
    <string name="common_ok">OK</string>
    <string name="common_delete">DELETE</string>
    <string name="common_cancel">CANCEL</string>
    <string name="common_err_empty">You can`t send empty</string>
    <string name="common_err_name_nickname_empty">You can`t save empty name and nickname</string>
    <string name="common_err_name_empty">Name can`t be empty</string>
    <string name="common_user_top_format">#%d</string>

    <!-- auth screen !-->
    <string name="auth_sign_with_email">Sign in with email</string>
    <string name="auth_sign_with_gmail">Sign in with google</string>

    <!-- choose city fragment !-->
    <string name="choose_city_app_bar">Choose your city</string>

    <!-- map fragment !-->
    <string name="map_places_filter_title">filter</string>
    <string name="map_places_filter_close_label">close</string>
    <string name="map_places_filter_all_label">ALL</string>
    <string name="map_places_filter_my_label">MY</string>
    <string name="map_search_field_hint">Input text</string>
    <string name="map_fab_btn_label">Add point</string>

    <!-- point detail component !-->
    <string name="place_detail_component_detail_button">Details</string>

    <!-- navigation drawer !-->
    <string name="nav_drawer_places_title">Places</string>
    <string name="nav_drawer_top_users_title">Top users</string>
    <string name="nav_drawer_top_places_title">Top places</string>
    <string name="nav_drawer_my_places_title">My places</string>
    <string name="nav_drawer_settings_title">Settings</string>
    <string name="nav_drawer_help_title">Help</string>
    <string name="nav_drawer_exit_title">Exit</string>

    <!-- server err screen !-->
    <string name="server_err_title">Connection error</string>
    <string name="server_err_body">Please, retry later</string>

    <!-- data empty screen !-->
    <string name="data_empty_title">Empty</string>
    <string name="data_empty_body">Data is empty yet</string>

    <!-- places fragment !-->
    <string name="places_app_bar">Places</string>
    <string name="places_first_tab">All</string>
    <string name="places_second_tab">My</string>

    <!-- place view fragment !-->
    <string name="place_view_status_hint">Status</string>
    <string name="place_view_status_published">Published</string>
    <string name="place_view_status_not_published">Not published</string>
    <string name="place_view_description_hint">Description</string>
    <string name="place_view_city_hint">City</string>
    <string name="place_view_in_top_hint">In top</string>
    <string name="place_view_in_top_content_format">#%d</string>
    <string name="place_view_comments_size_hint">Comments</string>
    <string name="place_view_created_hint">Created</string>
    <string name="place_view_comments_label">Comments:</string>
    <string name="place_view_edit_field_hint">Input text</string>
    <string name="place_view_author_field_hint">Author</string>
    <string name="place_view_show_place_on_map_btn">Show place on map</string>

    <!-- choose place point fragment !-->
    <string name="choose_place_point_app_bar">Choose point</string>
    <string name="choose_place_point_next_btn">Next</string>

    <!-- publish place fragment !-->
    <string name="publish_place_app_bar">Publish place</string>
    <string name="publish_place_name_hint">Name</string>
    <string name="publish_place_description_hint">Description</string>
    <string name="publish_place_private_toggle_label">Publish place</string>
    <string name="publish_place_publish_button">Publish</string>

    <!-- update place fragment !-->
    <string name="update_place_app_bar">Update place</string>
    <string name="update_place_name_hint">Name</string>
    <string name="update_place_description_hint">Description</string>
    <string name="update_place_private_toggle_label">Publish place</string>
    <string name="update_place_save_button">Save</string>
    <string name="update_place_delete_button">Delete</string>
    <string name="update_place_updated_message">Place updated</string>

    <!-- Place published fragment !-->
    <string name="place_published_title">Place created</string>
    <string name="place_published_app_bar">Success!</string>
    <string name="place_published_body">You created new place. Share it with your friends</string>
    <string name="place_published_body_2">Places created:</string>

    <!-- Top users fragment !-->
    <string name="top_users_app_bar">Top users</string>

    <!-- Top places fragment !-->
    <string name="top_places_app_bar">Top places</string>

    <!-- User fragment !-->
    <string name="user_name_hint">Name</string>
    <string name="user_places_hint">Places</string>
    <string name="user_top_position_hint">Top position</string>
    <string name="user_in_placer_hint">In placer</string>
    <string name="user_places_label">Places:</string>

    <!-- Settings fragment !-->
    <string name="settings_app_bar">Settings</string>
    <string name="settings_edit_profile_label">Edit profile</string>
    <string name="settings_push_notifications_toggle">Push notifications</string>

    <!-- Edit profile fragment !-->
    <string name="edit_profile_app_bar">Edit profile</string>
    <string name="edit_profile_name_hint">Name</string>
    <string name="edit_profile_nickname_hint">Nickname</string>
    <string name="edit_profile_city_hint">City</string>
    <string name="edit_profile_save_button">Save</string>

    <!-- Help fragment !-->
    <string name="help_app_bar">Help</string>
    <string name="help_first_title">Welcome to Placer!</string>
    <string name="help_first_body">In our app you can see interesting places of other users and post yours</string>
    <string name="help_second_title">Privacy features</string>
    <string name="help_second_body">Also, you can save private places, and other users will not see it in map and lists</string>
    <string name="help_third_title">Tops and publishing</string>
    <string name="help_third_body">See other places, post yours, disscuss it, promote your places in top rating, share it with friends in social networks  and enjoy! Good luck!</string>
    <string name="help_start_button">Start</string>

    <!-- Comments component !-->
    <string name="comments_empty_title">Is empty yet!</string>

    <string name="days">%d days</string>
    <string name="null_representation">Not entered</string>
    <string name="menu_search">Search</string>

    <!-- Delete dialog !-->
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_body">Are you sure?</string>

    <!-- push settings !-->
    <string name="push_channel_id">PlacerPushChannelId</string>
    <string name="push_channel_name">Placer push channel</string>
    <string name="push_channel_desc">Channel for clients push notifications</string>

</resources>