<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.placer.client.entity.UserView" />
    </data>

    <com.placer.client.customview.BaseConstraintLayout
        android:id="@+id/baseConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollableContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/avatarView"
                    android:layout_width="@dimen/screen_avatar_size"
                    android:layout_height="@dimen/screen_avatar_size"
                    android:layout_marginTop="?actionBarSize"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    app:avatarUrl="@{user.avatarUrl}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nameView"
                    style="@style/headline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="@{user.nickname != null ? user.nickname : user.name}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avatarView" />

                <TextView
                    android:id="@+id/cityView"
                    style="@style/item_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:layout_marginTop="@dimen/smallest_margin"
                    android:text="@{user.cityName}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameView" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cityView">

                    <com.placer.client.customview.fields.EditField
                        android:id="@+id/nameField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="213dp"
                        app:edit_field_hint="@string/edit_profile_name_hint"
                        app:inputType="text"
                        app:isNextIme="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:text="@{user.name}" />

                    <com.placer.client.customview.fields.EditField
                        android:id="@+id/nicknameField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:edit_field_hint="@string/edit_profile_nickname_hint"
                        app:inputType="text"
                        app:isDoneIme="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameField"
                        app:text="@{user.nickname}" />

                    <com.placer.client.customview.fields.SelectField
                        android:id="@+id/cityField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nicknameField"
                        app:select_field_hint="@string/edit_profile_city_hint"
                        app:text="@{user.cityName}" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveButton"
                        style="@style/default_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/edit_profile_save_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cityField" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </com.placer.client.customview.BaseConstraintLayout>
</layout>